# EmberLearn

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  HACKATHON-COMPLIANCE-REPORT.md  HACKATHON-STATUS.md  README.md  SKILLS-PROGRESS.md  SUBMISSION-GUIDE.md  SUBMISSION_CHECKLIST.md  design-system.json  package-lock.json  reseed_db.py  setup.sh  skills-library-README.md  start.sh  test-frontend-backend.html  test-stack.sh
backend/: .env.example  README.md  alembic.ini  check_database.py  create_tables.py  demo_server.py  main.py  pyproject.toml  pytest.ini  requirements-local.txt  requirements.txt  simple_triage_server.py  test_cors.py  test_exercise_detail.py  test_exercises_api.py  test_full_flow.py  validate_setup.py
backend/agents/: __init__.py  agent_factory.py  base_agent.py  client.py  code_review.py  concepts.py  debug.py  exercise.py  struggle_detector.py  triage.py
backend/alembic/: env.py
backend/app/: __init__.py  agents.py  auth.py  config.py  database.py  models.py  schemas.py
backend/code_review_agent/: Dockerfile  agent.py  main.py  requirements.txt
backend/concepts_agent/: Dockerfile  agent.py  main.py  requirements.txt
backend/database/: __init__.py  alembic.ini  config.py  models.py  seed_exercises.py  session.py
backend/debug_agent/: agent.py  main.py
backend/exercise_agent/: Dockerfile  agent.py  main.py  requirements.txt
backend/models/: __init__.py  chat.py  exercise.py  progress.py  streak.py  user.py
backend/progress_agent/: Dockerfile  agent.py  main.py
backend/routers/: __init__.py  auth.py  chat.py  (+3 more)
(+279 files in other folders)
